--- a/asking/templates/asking/base.html
+++ b/asking/templates/asking/base.html
@@ -7,6 +7,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+        <meta name = "csrf-token" content="{{ csrf_token }}">
         <title>{% block title %}
         {% endblock %}</title>
 		<link rel = "stylesheet" href = "{% static "asking/css/style.css" %}"/>
@@ -111,5 +112,12 @@
 		</footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="{% static 'asking/js/ajax.js' %}"></script>
+    <script>
+        $.ajaxSetup({
+            headers:{
+                'X-CSRF-TOKEN': $('meta[name="csrf-token"]').attr('content')
+            }
+        });
+    </script>
 	</body>
 </html>
