--- a/asking/static/asking/css/style.css
+++ b/asking/static/asking/css/style.css
@@ -1,3 +1,20 @@
+html{
+    min-height: 100%;
+}
+
 body {
+    background: linear-gradient( #16014c 30%, #e6d16c 100%) !important;
+    background-attachment: scroll;
     padding: 10px;
+}
+
+.hr_washed {
+    background: #e6d16c !important;
+    color: #e6d16c !important;
+    border-color: #e6d16c !important;
+    margin: 20px 0;
+    padding: 0;
+    height: 0;
+    border: none;
+    box-shadow: 0 0 10px 5px #e6d16c;
 }
