--- a/asking/templates/asking/ask.html
+++ b/asking/templates/asking/ask.html
@@ -6,7 +6,7 @@
 
 {% block content %}
     {% if user.is_authenticated %}
-    <h1 class = "text-center">Задайте свой вопрос</h1>
+    <h1  style="color: #e6d16c" class = "text-center">Задайте свой вопрос</h1>
     {% if form.errors %}
         <div class="alert alert-danger">{{ form.non_field_errors.as_text|slice:"2:" }}</div>
     {% endif %}
