--- a/asking/templates/asking/index.html
+++ b/asking/templates/asking/index.html
@@ -8,30 +8,32 @@
     <div class = "my-4 p-2">
         {% if index or q %}
             <div class="row">
-                <h2>{{ title }}</h2>
+                <h2 style="color: #e6d16c; font-weight: bold">{{ title }}</h2>
             </div>
+            <br>
+            <br>
             {% if page_obj.has_other_pages %}
                 <nav>
                     <ul class="pagination justify-content-left">
                         {% if page_obj.has_previous %}
                             <li class="page_item">
-                                <a class="page-link" href="?page={{ page_obj.previous_page_number }}">&lt;</a>
+                                <a style="background-color: slategrey; color: #16014c" class="page-link" href="?page={{ page_obj.previous_page_number }}">&lt;</a>
                             </li>
                         {% endif %}
                         {% for p in page_obj.paginator.page_range %}
                             {% if page_obj.number == p %}
                                 <li class = "page-item active">
-                                    <a class="page-link" href="?page={{ p }}">{{ p }}</a>
+                                    <a style="background-color: #e6d16c; color: #16014c" class="page-link" href="?page={{ p }}">{{ p }}</a>
                                 </li>
                             {% elif p >= page_obj.number|add:-2 and p <= page_obj.number|add:2 %}
                                 <li class = "page-item">
-                                    <a class="page-link" href="?page={{ p }}">{{ p }}</a>
+                                    <a style="background-color: slategrey; color: #16014c" class="page-link" href="?page={{ p }}">{{ p }}</a>
                                 </li>
                             {% endif %}
                         {% endfor %}
                         {% if page_obj.has_next %}
                             <li class="page_item">
-                                <a class="page-link" href="?page={{ page_obj.next_page_number }}">&gt;</a>
+                                <a style="background-color: slategrey; color: #16014c" class="page-link" href="?page={{ page_obj.next_page_number }}">&gt;</a>
                             </li>
                         {% endif %}
                     </ul>
