--- a/asking/templates/asking/sidepanel.html
+++ b/asking/templates/asking/sidepanel.html
@@ -1,35 +1,35 @@
 {% load static %}
 
 {% block sidepanel %}
-    <div class = "border rounded bg-light mb-4">
-        <h2 class = "text-center">Популярные теги</h2>
+    <div class = "border rounded mb-4" style="background-color: slategrey">
+        <h2 style="color: #e6d16c; font-weight: bold" class = "text-center">Популярные теги</h2>
         <div class="text-center my-3">
-            <a class="hot_tags0" style="font-weight: bold"></a>
+            <a style="color: #e6d16c" class="hot_tags0" style="font-weight: bold"></a>
         </div>
         <div class="text-center my-3">
-            <a class="hot_tags1" style="font-weight: bold"></a>
+            <a style="color: #e6d16c" class="hot_tags1" style="font-weight: bold"></a>
         </div>
         <div class="text-center my-3">
-            <a class="hot_tags2" style="font-weight: bold"></a>
+            <a style="color: #e6d16c" class="hot_tags2" style="font-weight: bold"></a>
         </div>
         <div class="text-center my-3">
-            <a class="hot_tags3" style="font-weight: bold"></a>
+            <a style="color: #e6d16c" class="hot_tags3" style="font-weight: bold"></a>
         </div>
         <div class="text-center my-3">
-            <a class="hot_tags4" style="font-weight: bold"></a>
+            <a style="color: #e6d16c" class="hot_tags4" style="font-weight: bold"></a>
         </div>
     </div>
-    <div class = "border rounded bg-light mb-4">
-        <h2 class = "text-center">Самые активные</h2>
-        <div class="active_users0 text-center">
+    <div class = "border rounded mb-4" style="background-color: slategrey">
+        <h2 style="color: #e6d16c; font-weight: bold" class = "text-center">Лучшие знатоки</h2>
+        <div style="color: #e6d16c" class="active_users0 text-center">
         </div>
-        <div class="active_users1 text-center">
+        <div style="color: #e6d16c" class="active_users1 text-center">
         </div>
-        <div class="active_users2 text-center">
+        <div style="color: #e6d16c" class="active_users2 text-center">
         </div>
-        <div class="active_users3 text-center">
+        <div style="color: #e6d16c" class="active_users3 text-center">
         </div>
-        <div class="active_users4 text-center">
+        <div style="color: #e6d16c" class="active_users4 text-center">
         </div>
     </div>
 {% endblock %}
