--- a/asking/templates/asking/sidepanel.html
+++ b/asking/templates/asking/sidepanel.html
@@ -2,34 +2,34 @@
 
 {% block sidepanel %}
     <div class = "border rounded mb-4" style="background-color: slategrey">
-        <h2 style="color: #e6d16c; font-weight: bold" class = "text-center">Популярные теги</h2>
+        <h2 class = "text-center nav-link">Популярные теги</h2>
         <div class="text-center my-3">
-            <a style="color: #e6d16c" class="hot_tags0" style="font-weight: bold"></a>
+            <a class="hot_tags0 text-style" style="font-weight: bold"></a>
         </div>
         <div class="text-center my-3">
-            <a style="color: #e6d16c" class="hot_tags1" style="font-weight: bold"></a>
+            <a  class="hot_tags1 text-style" style="font-weight: bold"></a>
         </div>
         <div class="text-center my-3">
-            <a style="color: #e6d16c" class="hot_tags2" style="font-weight: bold"></a>
+            <a class="hot_tags2 text-style" style="font-weight: bold"></a>
         </div>
         <div class="text-center my-3">
-            <a style="color: #e6d16c" class="hot_tags3" style="font-weight: bold"></a>
+            <a class="hot_tags3 text-style" style="font-weight: bold"></a>
         </div>
         <div class="text-center my-3">
-            <a style="color: #e6d16c" class="hot_tags4" style="font-weight: bold"></a>
+            <a class="hot_tags4 text-style" style="font-weight: bold"></a>
         </div>
     </div>
     <div class = "border rounded mb-4" style="background-color: slategrey">
-        <h2 style="color: #e6d16c; font-weight: bold" class = "text-center">Лучшие знатоки</h2>
-        <div style="color: #e6d16c" class="active_users0 text-center">
+        <h2 class = "text-center nav-link">Лучшие знатоки</h2>
+        <div class="active_users0 text-center text-style">
         </div>
-        <div style="color: #e6d16c" class="active_users1 text-center">
+        <div class="active_users1 text-center text-style">
         </div>
-        <div style="color: #e6d16c" class="active_users2 text-center">
+        <div class="active_users2 text-center text-style">
         </div>
-        <div style="color: #e6d16c" class="active_users3 text-center">
+        <div class="active_users3 text-center text-style">
         </div>
-        <div style="color: #e6d16c" class="active_users4 text-center">
+        <div class="active_users4 text-center text-style">
         </div>
     </div>
 {% endblock %}
