--- a/asking/templates/asking/login.html
+++ b/asking/templates/asking/login.html
@@ -5,7 +5,7 @@
 {% block title %}Авторизация{% endblock %}
 
 {% block content %}
-    <h1  style="color: #e6d16c" class = "text-center">Авторизация</h1>
+    <h1 class = "text-center nav-link">Авторизация</h1>
     {% if form.errors %}
         <div class="alert alert-danger">{{ form.non_field_errors.as_text|slice:"2:" }}</div>
     {% endif %}
