--- a/asking/templates/asking/signup.html
+++ b/asking/templates/asking/signup.html
@@ -5,7 +5,7 @@
 {% block title %}{{ title }}{% endblock %}
 
 {% block content %}
-    <h1  style="color: #e6d16c" class = "text-center">{{ title }}</h1>
+    <h1 class = "text-center nav-link">{{ title }}</h1>
     {% if alert %}
         {% if form.errors %}
             <div class="alert alert-danger">{{ form.non_field_errors.as_text|slice:"2:" }}</div>
